# ThreadRollDetection-QtYOLO-TRT

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  main.hpp  script.ipynb
include/: common.hpp  infer.h  logging.h  process.h  qswitchbutton.h  utils.hpp  yolov8-seg.hpp  yolowindow.h
resources/: resource.qrc
src/: infer.cpp  process.cpp  qswitchbutton.cpp  utils.cpp  yolowindow.cpp  yolowindow.qml  yolowindow.ui
test/: debug_log.txt
